// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell 代码片段 单行title+placeholder 1`] = `
<div
  class="mui-cell"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <p
      class="mui-cell__ft_placeholder"
    >
      
      请选择
    
    </p>
     
    <p
      class=""
    >
       
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 代码片段 单行title+value 1`] = `
<div
  class="mui-cell"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 代码片段 单行title+value+isLink 1`] = `
<div
  class="mui-cell mui-cell_access"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 代码片段 双value 1`] = `
<div
  class="mui-cell mui-cell_multiline"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class="mui-cell__ft_value"
    >
       cellValue
    </p>
     
    <p
      class="mui-cell__ft_subvalue"
    >
      cellSubValue
    </p>
  </div>
</div>
`;

exports[`Cell 代码片段 双标题 1`] = `
<div
  class="mui-cell mui-cell_multiline"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class="mui-cell__bd_title"
    >
      cellTitle
    </p>
     
    <p
      class="mui-cell__bd_subtitle"
    >
      cellSubTitle
    </p>
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 代码片段 自动高度 1`] = `
<div
  class="mui-cell mui-cell_autoheight mui-cell_multiline"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class="mui-cell__ft_value"
    >
       cellValue
    </p>
     
    <p
      class="mui-cell__ft_subvalue"
    >
      cellSubValue
    </p>
  </div>
</div>
`;

exports[`Cell 属性测试 cell autoHeight 1`] = `
<div
  class="mui-cell mui-cell_autoheight"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell subTitle 1`] = `
<div
  class="mui-cell mui-cell_multiline"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class="mui-cell__bd_title"
    >
      cellTitle
    </p>
     
    <p
      class="mui-cell__bd_subtitle"
    >
      cellSubTitle
    </p>
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <p
      class="mui-cell__ft_placeholder"
    >
      
      
    
    </p>
     
    <p
      class=""
    >
       
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell subValue 1`] = `
<div
  class="mui-cell mui-cell_multiline"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class="mui-cell__ft_value"
    >
       cellValue
    </p>
     
    <p
      class="mui-cell__ft_subvalue"
    >
      cellSubValue
    </p>
  </div>
</div>
`;

exports[`Cell 属性测试 cell title,默认单行 1`] = `
<div
  class="mui-cell"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <p
      class="mui-cell__ft_placeholder"
    >
      
      
    
    </p>
     
    <p
      class=""
    >
       
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell value 1`] = `
<div
  class="mui-cell"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;
